--- a/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/ExtensionView.mxml
@@ -5,9 +5,7 @@
 			import com.bedrock.framework.engine.Bedrock;
 			import com.bedrock.framework.core.logging.LogLevel;
 			import com.greensock.easing.Circ;
-			import com.greensock.easing.Expo;
 			import com.greensock.TweenLite;
-			import mx.logging.Log;
 			import com.bedrock.framework.plugin.util.VariableUtil;
 			import com.bedrock.extension.view.popups.ExtensionSettingsView;
 			import mx.managers.PopUpManager;
@@ -22,6 +20,7 @@
             private var BedrockLogo:Class;
 			[Embed("assets/HeaderBackground.png")]
             private var HeaderBackground:Class;
+            
 			private var _extensionSettingsView:ExtensionSettingsView;
 			private var _menuVisible:Boolean;
 			
@@ -61,7 +60,7 @@
 			{
 				Button( this.projectButtonBar.getChildAt( 1 ) ).enabled = $enabled;
 				Button( this.projectButtonBar.getChildAt( 2 ) ).enabled = $enabled;
-				Button( this.projectButtonBar.getChildAt( 3 ) ).enabled = $enabled;
+				//Button( this.projectButtonBar.getChildAt( 3 ) ).enabled = $enabled;
 			}
 			
 			
@@ -133,7 +132,7 @@
 		            <mx:String>Archive</mx:String>
 		            <mx:String>Project</mx:String>
 		            <mx:String>Class Generator</mx:String>
-		            <mx:String>Sample Browser</mx:String>
+		            <!--<mx:String>Sample Browser</mx:String>-->
 		        </mx:dataProvider>  
 			</mx:ToggleButtonBar>
 		</mx:HBox>
@@ -166,7 +165,7 @@
 		<view:ArchiveView />
 		<mx:Canvas width="100%" height="100%" id="projectContainer" />
 		<extras:ClassGeneratorView />
-		<extras:SampleBrowserView />
+		<!--<extras:SampleBrowserView />-->
 		<extras:NamingConventionsView />
 	</mx:ViewStack>
 </mx:Canvas>
