--- a/extension/trunk/source/com/bedrock/extension/view/popups/ModuleDeletionView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/popups/ModuleDeletionView.mxml
@@ -2,7 +2,7 @@
 <GenericProjectPopupView xmlns="com.bedrock.extension.view.popups.*" xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
-			import com.bedrock.framework.engine.Bedrock;
+			import com.bedrock.framework.Bedrock;
 			import com.bedrock.extension.event.ExtensionEvent;
 			import mx.managers.PopUpManager;
 			
