--- a/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/AssetsView.mxml
@@ -2,8 +2,8 @@
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="this.bootup()" styleName="padded5px" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
+			import com.bedrock.framework.Bedrock;
 			import com.greensock.loading.XMLLoader;
-			import com.bedrock.framework.engine.Bedrock;
 			import com.bedrock.extension.view.popups.SpecialAssetCreationView;
 			import com.bedrock.framework.engine.data.BedrockAssetData;
 			import mx.managers.PopUpManager;
