--- a/extension/trunk/source/com/bedrock/extension/view/project/EnvironmentsView.mxml
+++ b/extension/trunk/source/com/bedrock/extension/view/project/EnvironmentsView.mxml
@@ -2,7 +2,7 @@
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%"  creationComplete="this.bootup()" xmlns:view="com.bedrock.project.extension.view.*" styleName="padded5px" xmlns:misc="com.bedrock.extension.view.misc.*">
 	<mx:Script>
 		<![CDATA[
-			import com.bedrock.framework.engine.Bedrock;
+			import com.bedrock.framework.Bedrock;
 			import com.bedrock.extension.event.ExtensionEvent;
 			import mx.managers.PopUpManager;
 			import com.bedrock.extension.view.popups.PatternCreationView;
